# logseq-obsidian-batch-journal-rename

./: .gitignore  Cargo.toml
src/: main.rs
