[package]
name = "logseq-obsidian-batch-journal-rename"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
regex = "1.5.4"
anyhow = { version = "1.0.55", features = ["backtrace"]}
log = "0.4.14"
env_logger = "0.9.0"